@@ -40,10 +40,12 @@
             <compilerArgs>
               <arg>-Xlint:all,-serial,-processing,-this-escape</arg>
               <arg>-proc:none</arg>
+              <arg>--add-modules</arg>
+              <arg>jdk.incubator.vector</arg>
             </compilerArgs>
             <debug>true</debug>
             <source>${compileVersion}</source>
-            <target>${targetVersion}</target>
+            <release>${compileVersion}</release>
             <useIncrementalCompilation>true</useIncrementalCompilation>
           </configuration>
           <version>${compiler.version}</version>
@@ -88,6 +90,11 @@
           <version>${install.version}</version>
         </plugin>
         <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>${jacoco.version}</version>
+        </plugin>
+        <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>${jar.version}</version>
           <configuration>
@@ -104,6 +111,13 @@
             <author>true</author>
             <defaultAuthor>Michael J. Schnieders</defaultAuthor>
             <defaultSince>1.0</defaultSince>
+            <failOnError>false</failOnError>
+            <quiet>false</quiet>
+            <debug>true</debug>
+            <additionalOptions>
+              <additionalOption>--add-modules jdk.incubator.vector</additionalOption>
+            </additionalOptions>
+            <!-- doclint>all,-missing</doclint -->
           </configuration>
           <version>${javadoc.version}</version>
         </plugin>
@@ -139,8 +153,9 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
-            <!-- forkCount>0</forkCount -->
+            <!-- forkCount>1</forkCount -->
             <trimStackTrace>false</trimStackTrace>
+            <argLine>--add-modules jdk.incubator.vector</argLine>
           </configuration>
           <dependencies>
             <dependency>
@@ -375,8 +390,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <!-- Less than 1G may lead to JVM out of memory exceptions. -->
-          <argLine>-Xms1G -Xmx1G -Djava.awt.headless=true -Dj3d.rend=noop</argLine>
-          <useSystemClassLoader>false</useSystemClassLoader>
+          <!-- Jacoco agent details are within the property "jacoco.agent.ut.arg" -->
+          <argLine>@{jacoco.agent.ut.arg} -Xms1G -Xmx1G -Djava.awt.headless=true -Dj3d.rend=noop --add-modules jdk.incubator.vector</argLine>
+          <!-- useSystemClassLoader>false</useSystemClassLoader -->
           <excludes>
             <exclude>**/ParentEnergyTest</exclude>
           </excludes>
@@ -450,6 +466,34 @@
         <groupId>org.codehaus.mojo</groupId>
         <inherited>false</inherited>
         <version>${properties.version}</version>
+      </plugin>
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>${jacoco.version}</version>
+        <configuration>
+          <destFile>target/jacoco.exec</destFile>
+          <!-- append>true</append -->
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+            <configuration>
+              <propertyName>jacoco.agent.ut.arg</propertyName>
+              <skip>${jacoco.skip}</skip>
+            </configuration>
+          </execution>
+          <!-- attached to Maven test phase -->
+          <execution>
+            <id>report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
@@ -917,6 +961,7 @@
   <modelVersion>4.0.0</modelVersion>
   <modules>
     <module>modules/algorithms</module>
+    <module>modules/codecov</module>
     <module>modules/crystal</module>
     <module>modules/openmm</module>
     <module>modules/numerics</module>
@@ -976,79 +1021,81 @@
     <antrun.version>3.1.0</antrun.version>
     <appassembler.version>2.1.0</appassembler.version>
     <assembly.skipAssembly>false</assembly.skipAssembly>
-    <assembly.version>3.6.0</assembly.version>
+    <assembly.version>3.7.1</assembly.version>
     <biojava.version>7.1.1</biojava.version>
     <cdk.version>2.9</cdk.version>
     <changes.jira.skip>true</changes.jira.skip>
     <changes.version>2.12.1</changes.version>
     <checkstyle.skip>true</checkstyle.skip>
-    <checkstyle.version>3.3.1</checkstyle.version>
-    <ciftools-java.version>5.0.2</ciftools-java.version>
-    <clean.version>3.3.2</clean.version>
+    <checkstyle.version>3.4.0</checkstyle.version>
+    <ciftools-java.version>6.0.0</ciftools-java.version>
+    <clean.version>3.4.0</clean.version>
     <clover.version>4.4.1</clover.version>
     <clustering.version>1.2.0</clustering.version>
     <commons-beanutils.version>1.9.4</commons-beanutils.version>
     <commons-collections4.version>4.4</commons-collections4.version>
-    <commons-configuration2.version>2.9.0</commons-configuration2.version>
-    <commons-io.version>2.15.1</commons-io.version>
+    <!-- Versions of commons-configuration beyond 2.10.1 are not compatible with the IJava ipynb -->
+    <commons-configuration2.version>2.11.0</commons-configuration2.version>
+    <commons-io.version>2.16.1</commons-io.version>
     <commons-lang3.version>3.14.0</commons-lang3.version>
     <commons-math3.version>3.6.1</commons-math3.version>
-    <!-- Control the source version version -->
+    <!-- Versions of commons-text beyond 1.10.0 are not compatible with the IJava ipynb -->
+    <commons-text.version>1.12.0</commons-text.version>
+    <!-- Control the source version -->
     <compileVersion>21</compileVersion>
-    <compiler.version>3.12.1</compiler.version>
-    <dependency.version>3.6.1</dependency.version>
+    <compiler.version>3.13.0</compiler.version>
+    <dependency.version>3.7.1</dependency.version>
     <dependencyDetails>false</dependencyDetails>
-    <deploy.version>3.1.1</deploy.version>
-    <enforcer.version>3.4.1</enforcer.version>
-    <exec.version>3.2.0</exec.version>
+    <deploy.version>3.1.2</deploy.version>
+    <enforcer.version>3.5.0</enforcer.version>
+    <exec.version>3.3.0</exec.version>
     <failIfNoTests>false</failIfNoTests>
     <fastutil.version>8.5.12</fastutil.version>
     <!-- Version of FFX  -->
-    <ffx.version>1.0.0-BETA</ffx.version>
+    <ffx.version>1.0.0</ffx.version>
     <findbugs.version>3.0.2</findbugs.version>
-    <git-commit-id.version>8.0.1</git-commit-id.version>
+    <git-commit-id.version>9.0.0</git-commit-id.version>
     <gmavenplus.version>3.0.2</gmavenplus.version>
-    <graal.version>23.1.2</graal.version>
-    <!-- groovy-all.version>4.0.16</groovy-all.version -->
-    <groovy-all.version>5.0.0-alpha-6</groovy-all.version>
-    <guava.version>33.0.0-jre</guava.version>
-    <install.version>3.1.1</install.version>
-    <jar.version>3.3.0</jar.version>
+    <graal.version>24.0.1</graal.version>
+    <groovy-all.version>5.0.0-alpha-9</groovy-all.version>
+    <guava.version>33.2.1-jre</guava.version>
+    <install.version>3.1.2</install.version>
+    <jacoco.version>0.8.12</jacoco.version>
+    <jacoco.skip>true</jacoco.skip>
+    <jar.version>3.4.2</jar.version>
     <jarsigner.version>3.0.0</jarsigner.version>
-    <javaparser.version>3.25.9</javaparser.version>
+    <javaparser.version>3.26.1</javaparser.version>
     <java3d.version>1.7.1</java3d.version>
-    <javadoc.version>3.6.3</javadoc.version>
+    <javadoc.version>3.7.0</javadoc.version>
     <jakarta-xml.version>4.0.2</jakarta-xml.version>
     <jdepend.version>2.0</jdepend.version>
     <jna.version>5.14.0</jna.version>
     <jogamp-fat.version>2.5.0</jogamp-fat.version>
     <jopenmm.version>7.5.0-v11</jopenmm.version>
     <junit.version>4.13.2</junit.version>
-    <jxr.version>3.3.2</jxr.version>
+    <jxr.version>3.4.0</jxr.version>
     <linkcheck.skip>true</linkcheck.skip>
     <linkcheck.version>1.2</linkcheck.version>
     <log4j.version>2.23.1</log4j.version>
     <maven.build.timestamp.format>MM-dd-yyyy</maven.build.timestamp.format>
     <maven.javadoc.skip>false</maven.javadoc.skip>
     <maven.jxr.skip>false</maven.jxr.skip>
-    <picocli.version>4.7.5</picocli.version>
+    <picocli.version>4.7.6</picocli.version>
     <pj.version>1.0.1</pj.version>
-    <pmd.version>3.21.2</pmd.version>
+    <pmd.version>3.23.0</pmd.version>
     <!-- Skip PMD because it does not handle Java language version 21 yet. -->
     <pmd.skip>true</pmd.skip>
-    <project-info-reports.version>3.5.0</project-info-reports.version>
+    <project-info-reports.version>3.6.1</project-info-reports.version>
     <!-- Setting the source encoding is required for builds that are platform independent. -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <properties.version>1.2.1</properties.version>
     <quickhull3D.version>1.0.0</quickhull3D.version>
     <!-- Default locations for deploying a release (can be over-ridden by settings.xml) -->
     <release.repo>file:release</release.repo>
-    <release.version>3.0.1</release.version>
+    <release.version>3.1.0</release.version>
     <resources.version>3.3.1</resources.version>
-    <scm.version>2.0.1</scm.version>
-    <slf4j-nop.version>2.0.12</slf4j-nop.version>
-    <!-- The Shade plugin use of localRepository causes a validation message -->
-    <maven.plugin.validation>brief</maven.plugin.validation>
+    <scm.version>2.1.0</scm.version>
+    <slf4j-nop.version>2.0.13</slf4j-nop.version>
     <!-- AsciiDoc is not compatible with site version 4.0.0-M11 yet -->
     <site.version>3.12.1</site.version>
     <!-- site.version>4.0.0-M11</site.version -->
@@ -1057,9 +1104,9 @@
     <skipTests>true</skipTests>
     <!-- Default locations for deploying snapshots (can be over-ridden by settings.xml) -->
     <snapshot.repo>file:lib</snapshot.repo>
-    <source.version>3.3.0</source.version>
+    <source.version>3.3.1</source.version>
     <!-- There is a bug in Surefire version 3.0.0-M4 that effects running tests on Argon -->
-    <surefire.version>3.2.5</surefire.version>
+    <surefire.version>3.3.0</surefire.version>
     <!-- Control the target JRE version -->
     <targetVersion>21</targetVersion>
     <!-- Tensor Flow 1.12 depends on Cuda 9.2; version 1.13.1 depends on Cuda 10.0 -->
@@ -1068,7 +1115,7 @@
     <tornado.version>1.0.1</tornado.version>
     <!-- This is the javax.vecmath version used by CDK -->
     <vecmath.version>1.5.2</vecmath.version>
-    <versions.version>2.16.2</versions.version>
+    <versions.version>2.17.0</versions.version>
     <!-- Default locations for deploying the website (can be over-ridden by settings.xml) -->
     <website.repo>file:website</website.repo>
   </properties>
@@ -1119,7 +1166,11 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
           <failOnError>false</failOnError>
-          <quiet>true</quiet>
+          <quiet>false</quiet>
+          <debug>true</debug>
+          <additionalOptions>
+            <additionalOption>--add-modules jdk.incubator.vector</additionalOption>
+          </additionalOptions>
           <!-- excludePackageNames>edu.rit.*</excludePackageNames -->
         </configuration>
         <inherited>true</inherited>
@@ -1318,5 +1369,5 @@
     <url>https://github.com/SchniedersLab/forcefieldx</url>
   </scm>
   <url>https://ffx.biochem.uiowa.edu</url>
-  <version>1.0.0-beta</version>
+  <version>1.0.0</version>
 </project>
